--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Takunda Nyan'ara",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "mongoose": "^8.3.2"
   }
